hphp/hack/test/typecheck/wellformedness_record.php
<?hh

class C<T as arraykey> {}

record A {
  C<bool> x;
}
